# Strateji_Oyunu_Simulasyonu

./: README.md
project/: CMakeLists.txt  pro_lab_proje.c  senaryo.json
